<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_SensorBrands" Id="{d61775cb-212f-4795-b754-0b6acf5cecee}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SensorBrands :
(
	Sick 	:= 0,
	Pilz 	:= 1,
	Parker 	:= 2,
	Bosch 	:= 3
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>